# fastapi-task-limiter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: logging_config.py  settings.py
app/schemas/: response.py
app/services/: test_services.py  work_services.py
tests/: test_app.py
